Fixed cards going out of page boundaries by setting overflow to be hidden.

--- a/apps/frontend/src/components/ExploreTopicsSixUp/ExploreTopicsSixUp.scss
+++ b/apps/frontend/src/components/ExploreTopicsSixUp/ExploreTopicsSixUp.scss
@@ -2,6 +2,7 @@
 
   background-color: #F6F6F6;
   text-align: left;
+  overflow: hidden;
 
   .pds-explore-topics-six-up-container {
     padding: 30px 40px 34px 40px;
